# context_creator

./: .gitignore  README.md  pyproject.toml
context_creator/: __init__.py  context_creator.py  file_filter.py  file_iterator.py  file_tree_creator.py  gitignore_manager.py  main.py  types.py
tests/: __init__.py  test_context_creator.py  test_file_filter.py  test_file_tree_creator.py  test_main.py
